# non-c-on-zephyr

./: .gitignore  README.md  non-c.code-workspace  shell.nix
01-rust-hello/: .envrc
02-zig-hello/: hello.zig
03-ada-hello/: .gitignore  hello.adb
04-rust-zephyr-hello/: CMakeLists.txt  Cargo.toml
04-rust-zephyr-hello/src/: lib.rs  main.c
05-zig-zephyr-hello/: .gitignore  CMakeLists.txt  main.zig  prj.conf  zephyr.zig
05-zig-zephyr-hello/src/: hooks.c
